--- a/Projects.qmd
+++ b/Projects.qmd
@@ -6,13 +6,16 @@ title: "Projects"
 
 Here are my key outputs from the SUPER Program:
 
--   [Annotated Bibliography](media/ab.pdf){target="_blank"}\
--   [Research Poster](media/curc_poster.pdf){target="_blank"}\
--   [Communication](media/comm_piece.pdf){target="_blank"}[ Piece](media/SUPER_Communication_Piece.pdf){target="_blank"}\
+-   [Annotated Bibliography](media/ab.pdf){target="_blank"}
+
+-   [Research](media/curc_poster.jpg){target="_blank"}[ Poster](media/curc_poster.pdf){target="_blank"}
+
+-   [Communication Piece](media/comm_piece.pdf){target="_blank"}
+
 -   [Final Report](media/proj_report.pdf){target="_blank"}
 
 ------------------------------------------------------------------------
 
 ## Yellowstone National Park – Climate Impacts Project
 
--   [Research ](media/Yellowstone_Climate_Impacts_Poster.pdf){target="_blank"}[Poster](media/yell_poster.pdf){target="_blank"}
+-   [Research Poster](media/yell_poster.pdf){target="_blank"}
