mampus and ghg policy elements

--- a/Projects.qmd
+++ b/Projects.qmd
@@ -19,3 +19,16 @@ Here are my key outputs from the SUPER Program:
 ## Yellowstone National Park – Climate Impacts Project
 
 -   [Research Poster](media/yell_poster.pdf){target="_blank"}
+
+------------------------------------------------------------------------
+
+## CSU Mountain Campus – Forest Carbon Post-Fire Slides
+
+-   [Slides and Diagrams](media/forest_carbon_postfire_slides.pdf){target="_blank"}
+
+------------------------------------------------------------------------
+
+## Greenhouse Gas Policy Class Projects
+
+-   [Policy Brief – Disaster Risk Reduction in Colorado](media/DRR_Policy_Brief.pdf){target="_blank"}\
+-   [Green Roof Policy Analysis](media/Green_Roof_Policy_Analysis.pdf){target="_blank"}
